# Video-Downloader

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build.yml  ci.yml
packaging/windows/: installer.iss
tests/: test_conversion_service.py  test_download_manager.py  test_errors.py  test_ffmpeg_service.py  test_format_builder.py  test_history_service.py  test_models.py  test_settings.py  test_utils.py
video_downloader/: __init__.py
video_downloader/config/: constants.py  settings.py
video_downloader/core/: errors.py  event_bus.py  events.py  logging_config.py
video_downloader/models/: conversion.py  download.py  media.py
video_downloader/services/: conversion_service.py  download_manager.py  ffmpeg_service.py  format_builder.py  history_service.py  notification_service.py  ytdlp_service.py
video_downloader/ui/: app.py  texts.py  theme.py  utils.py
video_downloader/ui/components/: buttons.py  chip_group.py  download_tile.py  empty_state.py  folder_picker.py  format_table.py  media_card.py  option_cards.py  playlist_selector.py  sidebar.py  skeleton.py  status_pill.py  surface.py  toast.py  window_controls.py
video_downloader/ui/views/: about_view.py  config_view.py  converter_view.py  dashboard_view.py  downloads_view.py  history_view.py  settings_view.py
video_downloader/utils/: env.py  formatting.py  paths.py  validators.py
